--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,10 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "6.9.0",
+    "npm": "12.6.0"
+  },
   "dependencies": {
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
